# IDTAP

./: .gitignore  CLAUDE.md  Pipfile  README.md  chroma.json  humps.py  index.html  migration_plan.md  neh_whitepaper_technical_sections.docx  neh_whitepaper_technical_sections.md  neh_whitepaper_technical_sections_compressed.docx  neh_whitepaper_technical_sections_compressed.md  package.json  pnpm-lock.yaml  privacy-policy.html  pyproject.toml  python_api.md  requirements.txt  server.js  setup.py  test.xlsx  tsconfig.json  update-changelog.sh  vite.config.js  vitest.config.ts
.github/workflows/: update-changelog.yml
assemblage/: assemblage.ts  phraseAttributes.ts  rhythmicAnalysis.ts  testPhrase.ts
extracts/excel/: multani_test_octaved.xlsx  multani_test_pitchNumber.xlsx  multani_test_sargam_letter.xlsx  test.xlsx
extracts/mushtaq_ali_khan_yaman/: full_chroma_durations.json  non_mohra_alap_chroma_durations.json
humps/: __init__.py
python/: CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_waiver_flow.py
python/api/: __init__.py  auth.py  client.py  pyproject.toml
python/api_testing/: api_test.py  test_audio_download.py  test_data_export.py  test_write_transcription.py
python/cleanJson/: make_excel.py
python/idtap_api/: __init__.py  auth.py  client.py  setup.py  (+1 more)
server/: aggregations.js.d.ts  analysis.ts  apiRoutes.ts  classes.ts  extract.js  extract.ts  localExtractTest.ts  oauthRoutes.ts  package.json  pnpm-lock.yaml  server.ts  tsconfig.json  tsconfig.local.json  utils.ts
shared/: enums.ts  types.ts
src/: CHANGELOG.md  main.ts  vuex.d.ts
(+167 files in other folders)
