[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "idtap_api"
version = "0.1.0"
description = "Python API client and data classes for the IDTAP project"
dependencies = ["requests", "pymongo", "google-auth-oauthlib", "pyhumps"]

[project.optional-dependencies]
test = ["pytest", "responses"]

[tool.setuptools.packages.find]
where = ["python"]
include = ["idtap_api*"]

[tool.setuptools.package-dir]
"" = "python"
